--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "v4",
+  "name": "shukri-abdi-personal-website",
   "description": "Personal Website V4",
   "version": "1.0.0",
-  "author": "Brittany Chiang <brittany.chiang@gmail.com>",
+  "author": "Shukri Abdi <shukria4486@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bchiang7/v4"
+    "url": "https://github.com/sabdi21/sa-portfolio"
   },
   "keywords": [
     "gatsby"
