--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shukri-abdi-personal-website",
-  "description": "Personal Website V4",
+  "description": "Personal Website",
   "version": "1.0.0",
   "author": "Shukri Abdi <shukria4486@gmail.com>",
   "repository": {
